refatoração: separando em arquivos e organizando para melhor entendimento

--- a/public/chat.html
+++ b/public/chat.html
@@ -18,6 +18,9 @@
     integrity="sha256-TDxXjkAUay70ae/QJBEpGKkpVslXaHHayklIVglFRT4=" crossorigin="anonymous"></script>
   <script src="/socket.io/socket.io.js"></script>
   <!-- script que vai conter toda lógica de conexão com socket.io -->
-  <script src="./js/chat.js"></script>
+  <script type="module" src="/js/utils/user.js"></script>
+  <script type="module" src="/js/utils/listenerFunctions.js"></script>
+  <script type="module" src="/js/utils/elementsHTML.js"></script>
+  <script type="module" src="/js/chat.js"></script>
 </body>
 </html>
